Math.min()/Math.max() with no arguments is lowered incorrectly in the BytecodeParser https://bugs.webkit.org/show_bug.cgi?id=164464 <rdar://problem/29131452>

Reviewed by Darin Adler.

JSTests:

* stress/math-max-min-no-arguments.js: Added.
(assert):
(min):
(max):
(test):

Source/JavaScriptCore:

We were incorrectly matching this pattern inside the bytecode parser
to return NaN. Instead, we must return:
  Infinity for Math.min()
 -Infinity for Math.max()

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::handleMinMax):


Canonical link: https://commits.webkit.org/182221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208496 268f45cc-cd09-0410-ab3c-d52691b4dbfc